# smart-commits

./: Cargo.toml  README.md  smart_commit_prompt.md
src/: cli.rs  config.rs  main.rs
src/diff/: mod.rs  preprocess.rs
src/llm/: client.rs  stream.rs
src/output/: formatter.rs  mod.rs
src/prompt/: builder.rs  mod.rs
src/vcs/: git.rs  mod.rs  svn.rs
